# workflow_solver

./: .gitignore  .gitmodules  Backsubstitute.cpp  CMakeLists.txt  Eliminate.cpp  KVStore.hpp  NodeSizes.cpp  README.md  SeqSolver.cpp  SolverService.cpp  Tree.cpp  Tree.hpp  Util.cpp  Util.hpp  Workflow.cpp  Workflow.hpp  WorkflowSolver.cpp
